deploy/production/flog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flog-svc-production
  namespace: flog
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: LoadBalancer
  selector:
    app: flog-app-production
